--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
                                 <div class="btn">
                                     <!--                         <div class="web"><a href="#" target="_blank"><img src="images/web_page.png"  alt="웹페이지보기"></a></div>   -->
-                                    <div class="mobile"><a href="#" onclick="window.open('http://nmnm38.dothome.co.kr/osulloc/','_blank','width=480, height=960, left=0')"><img src="images/mobile_page.png" alt="모바일페이지보기"></a></div>
+                                    <div class="mobile"><a href="#" onclick="window.open('https://nami-web.github.io/OSULLOC/','_blank','width=480, height=960, left=0')"><img src="images/mobile_page.png" alt="모바일페이지보기"></a></div>
                                 </div>
                             </div>
 
