--- a/osulloc.html
+++ b/osulloc.html
@@ -8,6 +8,6 @@
     </style>
 </head>
 <body>
-    <img src="images/osulloc.jpg" alt="오설록">
+    <img src="https://cdn.jsdelivr.net/gh/nami-web/jnmnm/images/osulloc.jpg" alt="오설록">
 </body>
 </html>
