--- a/vips.html
+++ b/vips.html
@@ -8,6 +8,6 @@
     </style>
 </head>
 <body>
-    <img src="images/vips.png" alt="빕스">
+    <img src="https://cdn.jsdelivr.net/gh/nami-web/jnmnm/images/vips.png" alt="빕스">
 </body>
 </html>
